Light Source and Control Addition

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	</head>
 	<body>
 		<script src="js/three.js/build/three.js"></script>
+		<script src="js/three.js/build/three.min.js"></script>
+		<script src="js/three.js/examples/js/controls/OrbitControls.js"></script>
 		<script src= "scene1.js"></script>
 	</body>
 </html>
